--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
       }
     </style>
   </head>
-  <body style="margin: 0;">
+  <body style="background-color: black; margin: auto; height: 600px; width: 800px; transform: translateY(calc(50vh - 300px));">
     <canvas id="game-canvas"></canvas>
-    <div id="react-root" style="position: absolute; top: 0; left: 0; height: 600px; width: 800px; overflow: hidden;"></div>
+    <div id="react-root" style="position: relative; top: -600px; height: 600px; width: 800px; overflow: hidden;"></div>
     <script src="./index.js"></script>
   </body>
 </html>
